tests/extensions/classes/semanticErr/badClassObject.wacc
begin
    class sa is
        int s
        int b
    end
    class sb is
        int s
        int b
    end
    sa s1 = sb{1, 2}
end